kubernetes/1-rabbitmq-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    project: piggymetrics
    tier: infrastructure
    app: rabbitmq
  name: rabbitmq
spec:
  ports:
  - name: http
    port: 15672
    targetPort: 15672
  - name: amqp
    port: 5672
    targetPort: 5672
  selector:
    project: piggymetrics
    tier: infrastructure
    app: rabbitmq
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: piggymetrics
    tier: infrastructure
    app: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      project: piggymetrics
      tier: infrastructure
      app: rabbitmq
  template:
    metadata:
      labels:
        project: piggymetrics
        tier: infrastructure
        app: rabbitmq
    spec:
      containers:
      - image: 192.168.3.48:5000/sqshq/rabbitmq:3-management
        name: rabbitmq
        ports:
        - containerPort: 15672
        - containerPort: 5672
        resources: {}
      restartPolicy: Always
status: {}
