kubernetes/2-config-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    project: piggymetrics
    tier: infrastructure
    app: config
  name: config
spec:
  ports:
  - name: http
    port: 8888
    targetPort: 8888
  selector:
    project: piggymetrics
    tier: infrastructure
    app: config
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: piggymetrics
    tier: infrastructure
    app: config
  name: config
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      project: piggymetrics
      tier: infrastructure
      app: config
  template:
    metadata:
      labels:    
        project: piggymetrics
        tier: infrastructure
        app: config
    spec:
      containers:
      - env:
        - name: CONFIG_SERVICE_PASSWORD
          valueFrom: 
            secretKeyRef:
              name: piggymetrics
              key: config_service_password
        image: 192.168.3.48:5000/sqshq/piggymetrics-config:latest
        name: config
        ports:
        - containerPort: 8888
        resources: {}
      restartPolicy: Always
status: {}
