kubernetes/6-auth-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    project: piggymetrics
    tier: infrastructure
    app: auth-service
  name: auth-service
spec:
  ports:
  - name: http
    port: 5000
    targetPort: 5000
  selector:
    project: piggymetrics
    tier: infrastructure
    app: auth-service
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: piggymetrics
    tier: infrastructure
    app: auth-service
  name: auth-service
spec:
  replicas: 1
  strategy: 
    type: RollingUpdate
  selector:
    matchLabels:
      project: piggymetrics
      tier: infrastructure
      app: auth-service
  template:
    metadata:
      labels:
        project: piggymetrics
        tier: infrastructure
        app: auth-service
    spec:
      containers:
      - env:
        - name: ACCOUNT_SERVICE_PASSWORD
          valueFrom: 
            secretKeyRef:
              name: piggymetrics
              key: account_service_password
        - name: CONFIG_SERVICE_PASSWORD
          valueFrom: 
            secretKeyRef:
              name: piggymetrics
              key: config_service_password
        - name: MONGODB_PASSWORD
          valueFrom: 
            secretKeyRef:
              name: piggymetrics
              key: auth_mongodb_password
        - name: NOTIFICATION_SERVICE_PASSWORD
          valueFrom: 
            secretKeyRef:
              name: piggymetrics
              key: notification_service_password
        - name: STATISTICS_SERVICE_PASSWORD
          valueFrom: 
            secretKeyRef:
              name: piggymetrics
              key: statistics_service_password
        image: 192.168.3.48:5000/sqshq/piggymetrics-auth-service:latest
        name: auth-service
        ports:
          - containerPort: 5000
        resources: {}
      restartPolicy: Always
status: {}
