kubernetes/A-statistics-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    project: piggymetrics
    tier: backend
    app: statistics-service
  name: statistics-service
spec:
  ports:
  - name: http
    port: 7000
    targetPort: 7000
  selector:
    project: piggymetrics
    tier: backend
    app: statistics-service
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: piggymetrics
    tier: backend
    app: statistics-service
  name: statistics-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      project: piggymetrics
      tier: backend
      app: statistics-service
  template:
    metadata:
      labels:
        project: piggymetrics
        tier: backend
        app: statistics-service
    spec:
      containers:
      - env:
        - name: CONFIG_SERVICE_PASSWORD
          valueFrom: 
            secretKeyRef:
              name: piggymetrics
              key: config_service_password
        - name: MONGODB_PASSWORD
          valueFrom: 
            secretKeyRef:
              name: piggymetrics
              key: statistics_mongodb_password
        - name: STATISTICS_SERVICE_PASSWORD
          valueFrom: 
            secretKeyRef:
              name: piggymetrics
              key: statistics_service_password
        ports:
          - containerPort: 7000
        image: 192.168.3.48:5000/sqshq/piggymetrics-statistics-service:latest
        name: statistics-service
        resources: {}
      restartPolicy: Always
status: {}
