kubernetes/B-notification-mongodb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: notification-mongodb
  labels:
    project: piggymetrics
    tier: database
    app: notification-mongodb
spec:
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
  selector:
    project: piggymetrics
    tier: database
    app: notification-mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: piggymetrics
    tier: database
    app: notification-mongodb
  name: notification-mongodb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      project: piggymetrics
      tier: database
      app: notification-mongodb
  template:
    metadata:
      labels:    
        project: piggymetrics
        tier: database
        app: notification-mongodb
    spec:
      containers:
      - env:
        - name: MONGODB_PASSWORD
          valueFrom: 
            secretKeyRef:
              name: piggymetrics
              key: notification_mongodb_password
        ports:
          - containerPort: 27017
        image: 192.168.3.48:5000/sqshq/piggymetrics-mongodb:latest
        name: notification-mongodb
        resources: {}
      restartPolicy: Always
status: {}
