kubernetes/D-monitoring-service.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: monitoring.ex.test
    http:
      paths:
      - backend:
          service:
            name: monitoring
            port:
              number: 9000
        path: /
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  labels:
    project: piggymetrics
    tier: infrastructure
    app: monitoring
  name: monitoring
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9000
    targetPort: 8080
#    nodePort: 31090
  selector:
    project: piggymetrics
    tier: infrastructure
    app: monitoring
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: piggymetrics
    tier: infrastructure
    app: monitoring
  name: monitoring
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      project: piggymetrics
      tier: infrastructure
      app: monitoring
  template:
    metadata:
      labels:
        project: piggymetrics
        tier: infrastructure
        app: monitoring
    spec:
      containers:
      - env:
        - name: CONFIG_SERVICE_PASSWORD
          valueFrom: 
            secretKeyRef:
              name: piggymetrics
              key: config_service_password
        image: 192.168.3.48:5000/sqshq/piggymetrics-monitoring:latest
        name: monitoring
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
